--- a/D8dashboard/templates/base/navbar.html
+++ b/D8dashboard/templates/base/navbar.html
@@ -45,7 +45,8 @@
     
     <!-- Breadcrumb -->
     {% include 'base/breadcrumb.html' %}
-
-    {% block navbar %}
+    <!-- Breadcrumb Menu-->
+    {% block breadcrumb %}
     {% endblock %}
+
   </header>
